# www

./: README.org  build.sh
backend/: CHANGELOG.md  LICENSE  hie.yaml  www-backend.cabal
backend/app/: Main.hs
docs/: CNAME  about.html  img.html  index.html  main.js  projects.html  styles.css
frontend/: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
frontend/site/: index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
frontend/src/: about.html  img.html  index.html  inspo.html  photos.html  projects.html  styles.css
frontend/src/components/: terminal.js
frontend/src/pages/: index.js
frontend/src/static/: styles.css
frontend/src/templates/: index.html
frontend/src/templates/photos/: photos.html  summer-2025.html
wasm/: Cargo.toml
wasm/src/: ascii.rs  lib.rs  perlin.rs  vec3d.rs
