[package]
name = "www-wasm"
version = "0.1.0"
authors = ["Shiva Tamil Kumaran <shivatk01@gmail.com>"]
description = "WASM library for my personal website"
repository = "https://github.com/shiva-tk/www"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
noise = "0.9.0"
wasm-bindgen = "0.2"
rand = "0.8"
num-traits = "0.2"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "Window", "Node", "Performance", "PerformanceTiming"] }
